tmux pocket-ref

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -179,4 +179,5 @@ run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
 # tmux is completely keyboard driven but at times mouse usage can come handy for easier movements.
 # set-window-option -g mouse on
 # Note: Not going to enable this and not with out a fight. Let's try 100% mouse-free development.
-# Don't bind key at -T root context 
+# Don't bind key at -T root context
+# Nested tmux - Nada
