--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -152,7 +152,7 @@ set-window-option -g window-active-style fg=white,bg=colour235
 # Command / Message line
 set-window-option -g message-style fg=black,bold,bg=colour11
 
-# [12] Customizing the Status Line's Content
+# [12] Dress Up the Status Line
 #
 # Add session, window, pane indexes - good to know
 set -g status-left-length 40
@@ -165,6 +165,9 @@ set -g status-justify centre
 set -g status-interval 60
 set-window-option -g monitor-activity on # highlights the window name in the status line
 # set -g visual-activity on # show a message in the status line
+
+# Other dress
+# {line-numbers=off} status on status-interval 1 status-justify centre status-keys vi status-left “#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]” status-left-length 20 status-left-style default statusposition bottom status-right “#[fg=green,bg=default,bright]#(tmux-memcpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d” ” | cut -f 1 -d “,”) #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y- %m-%d” status-right-length 140 status-right-style default status-style fg=colour136,bg=colour235
 
 # [13] Extending tmux with Plugins
 #
