making tmux friendly

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,12 +1,19 @@
 ###########################
+#
 # Top 13 tmux Configuration that you should consider while start using tmux for three reasons:
 #
-# 1. tmux has a lot of less-than-stellar default setting
-# 2. Keyboard shortcuts in tmux are a bit of a stretch, both physically and mentally
-# 2. And, Configuration is fun, especially when you customize as per your need and taste
+# 1. Keyboard shortcuts in tmux are a bit of a stretch, both physically and mentally
+# 2. tmux has a lot of less-than-stellar default setting
+# 3. And, Configuration is fun, especially when you personalize it to suit your needs; after all that's what it's for!
 #
-# Let's make it friendly, and along the way, do not forget to put more comments in your configuration file; they'll jog your memory later.
-# -g, -r -T -N, M-, C- or ^
+# Let's make it friendly, and along the way, do not forget to put more comments in your configuration file; they'll jog your memory later. Treat this as a living document. Learn and update.
+#
+# Configure tmux with
+#   Built-in commands: set-option, set-window-option , bind-key & unbind-key
+#   Option Types: -g (global), -s (server), -w (window), -a (append to old option value), -u unset, -r -T -N
+# What's already there
+#   tmux show-options -g / -s / -w  => to view the set options
+#   tmux list-keys (<prefix> ?) => see bind-key values
 ###########################
 
 # Start with the biggie - <prefix>
@@ -20,14 +27,20 @@ unbind-key C-b              # free the original bind-key key
 set-option -g prefix C-a    # setting the prefix from C-b to C-a
 bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps
 
-# TODO: Change Default Shell
-set-option -g default-shell /usr/bin/zsh
+############################ [2] Basic Setting
+
+set-option -g default-command ~/github/    # command used for new windows
+set-option -g default-shell /usr/bin/zsh   # login shell for new windows/pane
+set-option -g history-limit 50000          # maximum number of lines held in window history - crank it up from 2k default
+set-option -g lock-after-time 3600         # lock the session after 60 mins of inactivity
+set-option -wg automatic-rename off
+set-option -g display-time 2000            # By default, status msg disappears in the blink of an eye (750ms)
 
 ############################# [2] Shortcut to Reload the Config
 #
 # There are two ways of reloading 1.shutting down all tmux sessions and restart them 2. executing 'source-file ~/.tmux.conf' on all the sessions. Let's make it easy to reload our config file between changes by new keybinding.
 
-bind-key r source-file ~/.tmux.conf \; display "Config Reloaded !"
+bind-key C-r source-file ~/.tmux.conf \; display "Config Reloaded !"
 
 ############################# [3] Kill it with X-Force!
 #
@@ -73,13 +86,14 @@ bind-key Right select-pane -R
 
 # Window: Movements
 bind-key L last-window
-bind-key -r C-h select-window -t :-    # cycle through the windows for quick window selection
+bind-key -r C-h select-window -t :-              # cycle through the windows for quick window selection
 bind-key -r C-l select-window -t :+
 
-# Command Prompt Movements:  within the tmux command prompt and the command prompt is accessed using <P>:
-set-option -g status-keys vi
+# word separators for automatic word selection
+set-window-option -g word-separators ' @"=()[]'  # default => ‘ -_@’.
 
-
+# tmux adds a short, almost imperceptible delay between the commands that can cause funny behavior when running vim inside tmux.
+set-option -s escape-time 0
 ############################# [7] Resizing Panes
 #
 # The default keys: Ctr+ Up/Down/Left/Right => one row movements , Ctr+ Up/Down/Left/Right => five row movements.
@@ -121,29 +135,19 @@ bind-key M-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buff
 bind-key M-s run "tmux capture-pane; tmux save-buffer ~/.mytmux/screenshots/pane_\"$(date +%FT%T)\".screenshots"
 
 
-# [12] Visual Styling: Configuring Colors
+############################# [12] Visual Styling: Configuring Colors
 #
 # Set the default terminal mode to 256color mode
 #
-# Why: Once the right color mode is set, you’ll find it much easier to use programs such as Vim, Emacs, and other full-color programs from within tmux, especially when you are using more complex color schemes for shell or syntax highlighting
-#
-####
-
-set -g default-terminal "screen-256color"
-
-# to use utf8 in status format
-set-window-option -g utf8 on
-set -g status on
-set -g status-utf8 on
-
-# Status Bar
-set -g status-style fg=white,bg=colour04
-set-window-option -g window-status-style fg=colour118,bg=colour04
-set-window-option -g window-status-current-style fg=black,bold,bg=colour011
+set -g default-terminal "screen-256color" # Once the right color mode is set, you’ll find it much easier to use programs such as Vim, Emacs, and other full-color programs from within tmux, especially when you are using more complex color schemes for shell or syntax highlighting
 
 # Pane divider
 set-window-option -g pane-border-style fg=colour11,bg=colour234
 set-window-option -g pane-active-border-style fg=colour118,bg=colour234
+set-window-option -g pane-border-lines double
+
+# Clock
+clock-mode-colour fg=black,bold,bg=colour11
 
 # Cool trick: Let's dim out any pane that's not active.
 set-window-option -g window-style fg=white,bg=colour236
@@ -152,19 +156,38 @@ set-window-option -g window-active-style fg=white,bg=colour235
 # Command / Message line
 set-window-option -g message-style fg=black,bold,bg=colour11
 
-# [12] Dress Up the Status Line
+############################# [12] Dress Up the Status Line
 #
-# Add session, window, pane indexes - good to know
-set -g status-left-length 40
-set -g status-left "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
 
-# Center the window list in the status line - this is much better
-set -g status-justify centre
+# basic
+set-option -g status-position top
+set-option -g status 2                     # two row in height for status bar
+set-option -g status-utf8 on               # to use utf8 in status format
+set-option -g status-keys vi               # # Command Prompt Movements:  within the tmux command prompt and the command prompt is accessed using <P>: (in the status line)
 
-# enable activity alerts
-set -g status-interval 60
-set-window-option -g monitor-activity on # highlights the window name in the status line
-# set -g visual-activity on # show a message in the status line
+# Status Bar
+set-option -g status-style fg=white,bg=colour04
+set-option -g status-justify centre
+set-window-option -g window-status-style fg=colour118,bg=colour04
+set-window-option -g window-status-current-style fg=black,bold,bg=colour011
+set-window-option -g window-status-last-style style fg=black,bold,bg=colour011
+set-window-option -g window-status-separator |
+
+# Left Side
+set-option -g status-left-length 50   # default 10
+set-option -g status-left "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
+# set-option -g status-left-style
+
+# Right Side
+set-option -g status-right-length 50   # default 50
+# set-option -g status-right "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
+# set-option -g status-right-style
+
+# Enable Activity Alerts
+set-option -g status-interval 60           # Update the status line every 60 seconds (15 is default)
+set-window-option -g monitor-activity on   # highlights the window name in the status line
+# set-window-option monitor-silence  on  -t  # useful in scripting session for monitoring activity is done or not
+#
 
 # Other dress
 # {line-numbers=off} status on status-interval 1 status-justify centre status-keys vi status-left “#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]” status-left-length 20 status-left-style default statusposition bottom status-right “#[fg=green,bg=default,bright]#(tmux-memcpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d” ” | cut -f 1 -d “,”) #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y- %m-%d” status-right-length 140 status-right-style default status-style fg=colour136,bg=colour235
@@ -179,8 +202,14 @@ run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
 
 # [x] Do not use:
 #
-# tmux is completely keyboard driven but at times mouse usage can come handy for easier movements.
+# tmux is completely keyboard driven but at times mouse usage can come handy for easier movements.  Some purists
+would balk at the notion of enabling mouse modes for tmux. I suggest you not to enable this and not with out a good fight. Let's try 100% mouse-free development. once you loose in the battel, come back here and enable it.
+
 # set-window-option -g mouse on
-# Note: Not going to enable this and not with out a fight. Let's try 100% mouse-free development.
+# set-option -g mouse-select-window on
+# set-option -g mouse-select-pane on
+# set-option -g mouse-resize-pane on
+# Note:
 # Don't bind key at -T root context
 # Nested tmux - Nada
+# set -g visual-activity on # show a message in the status line too annoying
