tmux-quick-ref from TnT & reorg for easy ref

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,10 @@
 # What's already there
 #   tmux show-options -g / -s / -w  => to view the set options
 #   tmux list-keys (<prefix> ?) => see bind-key values
+#
+# tmux allows sending keys, including Ctrl via C- or ^, alt (Meta) via M-, and special key names.
+# Here’s a list of special keys straight from the manual:
+# Up, Down, Left, Right, BSpace, BTab, DC (Delete), End, Enter, Escape, F1 to F12, Home, IC (Insert), NPage/PageDown/PgDn, PPage/PageUp/PgUp, Space, and Tab.
 ###########################
 
 # Start with the biggie - <prefix>
@@ -35,6 +39,7 @@ set-option -g history-limit 50000          # maximum number of lines held in win
 set-option -g lock-after-time 3600         # lock the session after 60 mins of inactivity
 set-option -wg automatic-rename off
 set-option -g display-time 2000            # By default, status msg disappears in the blink of an eye (750ms)
+set-option -g display-panes-time 2000      # By default, pane number disappears in 1 s (750ms)
 
 ############################# [2] Shortcut to Reload the Config
 #
@@ -112,6 +117,7 @@ bind-key -r L resize-pane -R 2
 set-window-option -g mode-keys vi
 
 # Vim Style in Copy-Mode "<prefix> ["
+# Interacting with Paste Buffer
 bind-key Escape copy-mode
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection            -N "start visual mode for selection"
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel  -N "yank text into the buffer"
@@ -199,6 +205,7 @@ set-window-option -g monitor-activity on   # highlights the window name in the s
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
+# more: turbocharging our configuration with maximum-awesome to a simpler and cleaner session management with tmuxinator and better pair programming with wemux,
 
 # [x] Do not use:
 #
