tmux config status bar update

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,7 +33,7 @@ bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps
 
 ############################ [2] Basic Setting
 
-set-option -g default-command ~/github/    # command used for new windows
+#set-option -g default-command ~/github/    # command used for new windows
 set-option -g default-shell /usr/bin/zsh   # login shell for new windows/pane
 set-option -g history-limit 50000          # maximum number of lines held in window history - crank it up from 2k default
 set-option -g lock-after-time 3600         # lock the session after 60 mins of inactivity
@@ -132,7 +132,7 @@ bind-key M-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind-key M-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\""
 
 # Ctr+C: Make it even better -just one step to move from sys->buffer->editor vice versa
-bind-key -T copy-mode-vi 'C-c' copy-pipe "xclip -sel clip -i"
+bind-key -Tcopy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
 
 # Ctr+V: To paste text from sys clipboard into current buffer
 bind-key M-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buffer"
@@ -150,10 +150,9 @@ set -g default-terminal "screen-256color" # Once the right color mode is set, yo
 # Pane divider
 set-window-option -g pane-border-style fg=colour11,bg=colour234
 set-window-option -g pane-active-border-style fg=colour118,bg=colour234
-set-window-option -g pane-border-lines double
 
 # Clock
-clock-mode-colour fg=black,bold,bg=colour11
+# set clock-mode-colour fg=black,bold,bg=colour11
 
 # Cool trick: Let's dim out any pane that's not active.
 set-window-option -g window-style fg=white,bg=colour236
@@ -166,17 +165,18 @@ set-window-option -g message-style fg=black,bold,bg=colour11
 #
 
 # basic
-set-option -g status-position top
-set-option -g status 2                     # two row in height for status bar
-set-option -g status-utf8 on               # to use utf8 in status format
+# set-option -g status-position top
+# set-option -g status 2                     # two row in height for status bar
+# set-option -g status-utf8 on               # to use utf8 in status format
 set-option -g status-keys vi               # # Command Prompt Movements:  within the tmux command prompt and the command prompt is accessed using <P>: (in the status line)
+# set-window-option -g pane-border-lines double
 
 # Status Bar
 set-option -g status-style fg=white,bg=colour04
 set-option -g status-justify centre
 set-window-option -g window-status-style fg=colour118,bg=colour04
 set-window-option -g window-status-current-style fg=black,bold,bg=colour011
-set-window-option -g window-status-last-style style fg=black,bold,bg=colour011
+set-window-option -g window-status-last-style fg=black,bold,bg=colour011
 set-window-option -g window-status-separator |
 
 # Left Side
@@ -186,7 +186,8 @@ set-option -g status-left "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour
 
 # Right Side
 set-option -g status-right-length 50   # default 50
-# set-option -g status-right "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
+set-option -g status-right "#[fg=grey,dim,bg=default] uptime: #(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
+
 # set-option -g status-right-style
 
 # Enable Activity Alerts
@@ -202,21 +203,7 @@ set-window-option -g monitor-activity on   # highlights the window name in the s
 #
 # ref: https://github.com/tmux-plugins/tpm
 #
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
 # more: turbocharging our configuration with maximum-awesome to a simpler and cleaner session management with tmuxinator and better pair programming with wemux,
-
-# [x] Do not use:
-#
-# tmux is completely keyboard driven but at times mouse usage can come handy for easier movements.  Some purists
-would balk at the notion of enabling mouse modes for tmux. I suggest you not to enable this and not with out a good fight. Let's try 100% mouse-free development. once you loose in the battel, come back here and enable it.
-
-# set-window-option -g mouse on
-# set-option -g mouse-select-window on
-# set-option -g mouse-select-pane on
-# set-option -g mouse-resize-pane on
-# Note:
-# Don't bind key at -T root context
-# Nested tmux - Nada
-# set -g visual-activity on # show a message in the status line too annoying
