ssh cmds & install app script

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -203,7 +203,7 @@ set-window-option -g monitor-activity on   # highlights the window name in the s
 #
 # ref: https://github.com/tmux-plugins/tpm
 #
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
 # more: turbocharging our configuration with maximum-awesome to a simpler and cleaner session management with tmuxinator and better pair programming with wemux,
