--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -159,8 +159,8 @@ set-window-option -g mode-keys vi
 # Vim Style in Copy-Mode "<prefix> ["
 # Interacting with Paste Buffer
 bind-key Escape copy-mode
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection            -N "start visual mode for selection"
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel  -N "yank text into the buffer"
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection            
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel
 bind-key C-b choose-buffer # view the buffer stack
 unbind-key p
 bind-key p paste-buffer # default "<prefix> ]"
