zsh rc - load alias & func

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,7 @@
 # - If you have already used the GNU screen, 'C-a' is already the standard key for you.
 
 # ```
+# run-shell 'echo "Prefix Should be Simple"'
 unbind-key C-b              # free the original bind-key key
 set-option -g prefix C-a    # setting the prefix from C-b to C-a
 bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or the shell that your interacting
@@ -46,6 +47,7 @@ bind-key C-r source-file ~/.tmux.conf \; display "Config Reloaded !"
 # Let me set my default to my fav shell - zsh. Macs now use zsh as the default login shell across the operating system. It is for a reason. Give it a try if you don't already use zsh as your default shell.
 # ```
 set-option -g default-shell /usr/bin/zsh          # login shell for new windows/pane
+#set-option -g default-command /usr/bin/zsh 
 # ```
 
 # #### 4. I Can't See Enough !
@@ -251,14 +253,14 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Last saved environment is automatically restored when tmux is started.
-set -g @continuum-boot 'on'  
+# set -g @continuum-boot 'on'  
 
 # terminal window will go fullscreen
-set -g @continuum-boot-options 'fullscreen' 
+# set -g @continuum-boot-options 'fullscreen' 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run-shell "mkdir -p ~/.tmux/plugins/"
-#run-shell "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
+# run-shell "mkdir -p ~/.tmux/plugins/" (part of build-dev-env script)
+# run-shell "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
 
 run '~/.tmux/plugins/tpm/tpm'
 
