--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,9 +36,9 @@ bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or th
 # 1. shutting down all tmux sessions and start them
 # 2. executing 'source-file ~/.tmux.conf' on all the sessions
 
-# What on earth you want to follow the above approaches! let's create the shortcut - `Ctr+r`
+# What on earth you want to follow the above approaches! let's create the shortcut - `Alt+r`
 # ```
-bind-key C-r source-file ~/.tmux.conf \; display "Config Reloaded !"
+bind-key M-r source-file ~/.tmux.conf \; display "Config Reloaded !"
 # ```
 
 # #### 3. This is How I Want to Start
@@ -47,7 +47,6 @@ bind-key C-r source-file ~/.tmux.conf \; display "Config Reloaded !"
 # Let me set my default to my fav shell - zsh. Macs now use zsh as the default login shell across the operating system. It is for a reason. Give it a try if you don't already use zsh as your default shell.
 # ```
 set-option -g default-shell /usr/bin/zsh          # login shell for new windows/pane
-#set-option -g default-command /usr/bin/zsh 
 # ```
 
 # #### 4. I Can't See Enough !
@@ -181,7 +180,7 @@ bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buff
 
 # To take ASCII screenshots (tmux-resurrect uses C-s for saving, here binding to Alt-s ) .
 # create the dir for storing screenshots
-bind-key M-s run "tmux capture-pane; tmux save-buffer ~/.mytmux/pane_screenshots/\"$(date +%FT%T)\".screenshots"
+bind-key M-s run "tmux capture-pane; tmux save-buffer ~/.mytmux/screenshots/#{session_name}-#{window_index}-#{pane_index}-$(date +%Y%m%dT%H%M%S).screenshots"
 
 # ```
 
@@ -253,7 +252,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Last saved environment is automatically restored when tmux is started.
-# set -g @continuum-boot 'on'  
+set -g @continuum-boot 'on'  
+
+# change the save interval from 15 mins to 30
+set -g @continuum-save-interval '30'
 
 # terminal window will go fullscreen
 # set -g @continuum-boot-options 'fullscreen' 
