--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -246,6 +246,9 @@ set-window-option -g monitor-activity on   # highlights the window name in the s
 # This plugin restores tmux environment after system restart. This plugin goes to great lengths to save and restore all the details from your tmux environment. See [doc](https://github.com/tmux-plugins/tmux-resurrect)
 # If you setup resurrect, then, the next logical thing to do is setup 'continuum' to make the saving and restroing as an automatic step.
 # ```
+# change the install path
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.mytmux/plugins'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -258,13 +261,10 @@ set -g @continuum-boot 'on'
 set -g @continuum-save-interval '30'
 
 # terminal window will go fullscreen
-# set -g @continuum-boot-options 'fullscreen' 
+set -g @continuum-boot-options 'fullscreen' 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run-shell "mkdir -p ~/.tmux/plugins/" (part of build-dev-env script)
-# run-shell "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
-
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.mytmux/plugins/tpm/tpm'
 
 # Hit prefix + I to install plugins for the first time. It takes few seconds. So, wait before panic.
 # 
