--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -180,7 +180,7 @@ bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buff
 
 # To take ASCII screenshots (tmux-resurrect uses C-s for saving, here binding to Alt-s ) .
 # create the dir for storing screenshots
-bind-key M-s run "tmux capture-pane; tmux save-buffer ~/.mytmux/screenshots/#{session_name}-#{window_index}-#{pane_index}-$(date +%Y%m%dT%H%M%S).screenshots"
+bind-key M-s run "tmux capture-pane; tmux save-buffer ~/.mytmux/screenshots/#{session_name}-#{window_index}-#{pane_index}-$(date +%Y%m%dT%H%M%S).screenshot"
 
 # ```
 
