path change for resurrect dir

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -254,6 +254,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# By default files are saved in ~/.tmux/resurrect dir. Change this to our custom path
+set -g @resurrect-dir '~/.mytmux/resurrect'
+
 # Last saved environment is automatically restored when tmux is started.
 set -g @continuum-boot 'on'  
 
