--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -92,8 +92,13 @@ bind-key X kill-session    # key combo for killing the entire session - <prefix>
 # Additionally, you also mention the directory to open in the new pane when you split.
 
 # ```
-bind-key | split-window -h -c "#{pane_current_path}" # let's open pane with current directory with -c option
-bind-key _ split-window -v -c "#{pane_current_path}"
+# full split 
+bind-key | split-window -fh -c "#{pane_current_path}" 
+bind-key _ split-window -fv -c "#{pane_current_path}"
+
+# split in the existing pane
+bind-key \ split-window -h -c "#{pane_current_path}" 
+bind-key - split-window -v -c "#{pane_current_path}"
 # ```
 
 # #### 8. Make Movements Quick
@@ -101,6 +106,9 @@ bind-key _ split-window -v -c "#{pane_current_path}"
 
 # Let's make movements in pane, window, & command prompt much familiar and faster,
 # ```
+
+### pane navigation bindings
+
 # Pane: Vim Style Movements
 bind-key -r h select-pane -L              # go left
 bind-key -r j select-pane -D              # go down
@@ -115,8 +123,12 @@ bind-key Right select-pane -R
 
 # Window: Movements
 bind-key L last-window
-bind-key -r C-h select-window -t :-              # cycle through the windows for quick window selection
+bind-key -r C-h select-window -t :- # cycle through the windows for quick window selection
 bind-key -r C-l select-window -t :+
+
+# swap window
+bind-key -r "<" swap-window -d -t -1
+bind-key -r ">" swap-window -d -t +1
 
 # word separators for automatic word selection
 set-window-option -g word-separators ' @"=()[]'  # default => ‘ -_@’.
