--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -97,7 +97,7 @@ bind-key | split-window -fh -c "#{pane_current_path}"
 bind-key _ split-window -fv -c "#{pane_current_path}"
 
 # split in the existing pane
-bind-key \ split-window -h -c "#{pane_current_path}" 
+bind-key "\\" split-window -h -c "#{pane_current_path}"  # \\ added as ESC 
 bind-key - split-window -v -c "#{pane_current_path}"
 # ```
 
@@ -241,12 +241,12 @@ set-window-option -g window-status-separator |
 # Left Side
 # Show my active session, window, pane name or id  
 set-option -g status-left-length 50   # default 10
-set-option -g status-left "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
+set-option -g status-left "#[fg=#00e6f1]SESSION #S | WINDOW #I-#W | PANE #P"
 # set-option -g status-left-style
 
 # Right Side
 set-option -g status-right-length 50   # default 50
-set-option -g status-right "#[fg=grey,dim,bg=default] uptime: #(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
+set-option -g status-right "#{cpu_fg_color}CPU #{cpu_percentage} | RAM #{ram_percentage} | UP#(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
 
 # Enable Activity Alerts
 set-option -g status-interval 60           # Update the status line every 60 seconds (15 is default)
@@ -263,8 +263,13 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.mytmux/plugins'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+set -g @cpu_percentage_format "%02d%%"
+set -g @ram_percentage_format "%02d%%"
 
 # By default files are saved in ~/.tmux/resurrect dir. Change this to our custom path
 set -g @resurrect-dir '~/.mytmux/resurrect'
