--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -245,8 +245,8 @@ set-option -g status-left "#[fg=#00e6f1]SESSION #S | WINDOW #I-#W | PANE #P"
 # set-option -g status-left-style
 
 # Right Side
-set-option -g status-right-length 50   # default 50
-set-option -g status-right "#{cpu_fg_color}CPU #{cpu_percentage} | RAM #{ram_percentage} | UP#(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
+set-option -g status-right-length 60   # default 50
+set-option -g status-right "#{cpu_fg_color}CPU #{cpu_percentage} | RAM #{ram_percentage} | TEMP #{cpu_temp} | UP#(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
 
 # Enable Activity Alerts
 set-option -g status-interval 60           # Update the status line every 60 seconds (15 is default)
