--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -215,7 +215,7 @@ set-window-option -g pane-active-border-style fg=colour118,bg=colour234
 
 # Cool trick: Let's dim out any pane that's not active.
 set-window-option -g window-style fg=white,bg=colour236
-set-window-option -g window-active-style fg=white,bg=colour235
+set-window-option -g window-active-style fg=white,bg=colour234
 
 # Command / Message line
 set-window-option -g message-style fg=black,bold,bg=colour11
@@ -288,8 +288,11 @@ run '~/.mytmux/plugins/tpm/tpm'
 
 # Hit prefix + I to install plugins for the first time. It takes few seconds. So, wait before panic.
 # 
-# resurrect key bindings:
+# resurrect:
 #   prefix + Ctrl-s - save
 #   prefix + Ctrl-r - restore
 # 
+# sidebar:
+#   prefix + Tab    - toggle sidebar
+#
 # ```
