--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -231,7 +231,7 @@ set-window-option -g message-style fg=black,bold,bg=colour11
 # Instead of going fancy here, I just focused on what can help me during my work and less resource-intensive operation. Below is my status bar config;
 # ```
 # Status Bar
-set-option -g status-style fg=white,bg=colour04
+set-option -g status-style fg=white,bg=colour235
 set-option -g status-justify centre
 set-window-option -g window-status-style fg=colour118,bg=colour04
 set-window-option -g window-status-current-style fg=black,bold,bg=colour011
@@ -241,12 +241,12 @@ set-window-option -g window-status-separator |
 # Left Side
 # Show my active session, window, pane name or id  
 set-option -g status-left-length 50   # default 10
-set-option -g status-left "#[fg=#00e6f1]SESSION #S | WINDOW #I-#W | PANE #P"
+set-option -g status-left "#[fg=#d0d3d4] #S | #I-#W | #P"
 # set-option -g status-left-style
 
 # Right Side
 set-option -g status-right-length 60   # default 50
-set-option -g status-right "#{cpu_fg_color}CPU #{cpu_percentage} | RAM #{ram_percentage} | TEMP #{cpu_temp} | UP#(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
+set-option -g status-right "#{cpu_fg_color}C#{cpu_percentage} | #{ram_fg_color}R#{ram_percentage} | #[fg=#00a4f1]D#(df -hl  | grep 'sda3' | awk '{print $5}') | #[fg=#d0d3d4]#(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
 
 # Enable Activity Alerts
 set-option -g status-interval 60           # Update the status line every 60 seconds (15 is default)
