--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -233,10 +233,10 @@ set-window-option -g message-style fg=black,bold,bg=colour11
 # Status Bar
 set-option -g status-style fg=white,bg=colour235
 set-option -g status-justify centre
-set-window-option -g window-status-style fg=colour118,bg=colour04
+set-window-option -g window-status-style fg=colour118,bg=colour236
 set-window-option -g window-status-current-style fg=black,bold,bg=colour011
 set-window-option -g window-status-last-style fg=black,bold,bg=colour011
-set-window-option -g window-status-separator |
+set-window-option -g window-status-separator >
 
 # Left Side
 # Show my active session, window, pane name or id  
