--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,8 +56,8 @@ set-option -g default-shell /usr/bin/zsh          # login shell for new windows/
 # - Default names given to the window are too vague even if you can see. Hi tmux, let me name it.
 
 # ```
-set-option -g display-time 2000            # By default, status msg disappears in the blink of an eye (750ms)
-set-option -g display-panes-time 2000      # By default, pane number disappears in 1 s
+set-option -g display-time 1000            # By default, status msg disappears in the blink of an eye (750ms)
+set-option -g display-panes-time 1200      # By default, pane number disappears in 1 s
 set-option -g history-limit 50000          # maximum number of lines held in window history - crank it up from 2k default
 set-option -g lock-after-time 3600         # lock the session after 60 mins of inactivity. Sometimes, it is good to protect your screen to make sure other's can't see enough.
 set-option -wg automatic-rename off        # default names are too vague to see. Let me name it.
@@ -230,18 +230,21 @@ set-window-option -g message-style fg=black,bold,bg=colour11
 
 # Instead of going fancy here, I just focused on what can help me during my work and less resource-intensive operation. Below is my status bar config;
 # ```
+# Enable powerline status bar
+# run-shell 'powerline-config tmux setup'
+
 # Status Bar
-set-option -g status-style fg=white,bg=colour235
+set-option -g status-style fg=white,bg=colour016
 set-option -g status-justify centre
-set-window-option -g window-status-style fg=colour118,bg=colour236
-set-window-option -g window-status-current-style fg=black,bold,bg=colour011
-set-window-option -g window-status-last-style fg=black,bold,bg=colour011
-set-window-option -g window-status-separator >
+set-window-option -g window-status-style fg=colour30,bg=colour234
+set-window-option -g window-status-last-style fg=colour36,bg=colour233
+set-window-option -g window-status-current-style fg=colour48,bg=colour232
+set-window-option -g window-status-separator |
 
 # Left Side
 # Show my active session, window, pane name or id  
 set-option -g status-left-length 50   # default 10
-set-option -g status-left "#[fg=#d0d3d4] #S | #I-#W | #P"
+set-option -g status-left "#[fg=#d0d3d4] #S | [#I]#W | [#P]"
 # set-option -g status-left-style
 
 # Right Side
