--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -214,8 +214,8 @@ set-window-option -g pane-border-style fg=colour11,bg=colour234
 set-window-option -g pane-active-border-style fg=colour118,bg=colour234
 
 # Cool trick: Let's dim out any pane that's not active.
-set-window-option -g window-style fg=white,bg=colour236
-set-window-option -g window-active-style fg=white,bg=colour234
+set-window-option -g window-style fg=colour245,bg=colour237
+set-window-option -g window-active-style fg=colour230,bg=colour235
 
 # Command / Message line
 set-window-option -g message-style fg=black,bold,bg=colour11
