--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -249,7 +249,7 @@ set-option -g status-left "#[fg=#d0d3d4] #S | [#I]#W | [#P]"
 
 # Right Side
 set-option -g status-right-length 60   # default 50
-set-option -g status-right "#{cpu_fg_color}C#{cpu_percentage} | #{ram_fg_color}R#{ram_percentage} | #[fg=#00a4f1]D#(df -hl  | grep 'sda3' | awk '{print $5}') | #[fg=#d0d3d4]#(uptime | cut -f 4-5 -d\" \" | cut -f 1 -d\",\")"
+set-option -g status-right "#{cpu_fg_color}C#{cpu_percentage} | #{ram_fg_color}R#{ram_percentage} | #[fg=#00a4f1]D#(df -hl  | grep 'sda3' | awk '{print $5}') | #[fg=#d0d3d4]#(uptime | awk '/up/{gsub(\",\",\"\",$4); print $3, $4;}')"
 
 # Enable Activity Alerts
 set-option -g status-interval 60           # Update the status line every 60 seconds (15 is default)
