nginx config; use env to refer to default app

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,15 @@ worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
+#### my notes
+# *structure
+#	single directive { more directives }
+#
+#  include: it says to process conf in other included dirs
+#  site-enabled: create symlink here to other nginx config files so that it will loaded 
+#
+####
+
 events {
 	worker_connections 768;
 	# multi_accept on;
