--- a/nginx/sites-available/perftestsite.local.conf
+++ b/nginx/sites-available/perftestsite.local.conf
@@ -1,4 +1,12 @@
 server {
-  listen 90;
-  root ~/github/ohmy-linux/nginx/var-www/perftestsite.local;
+  listen 11620;
+  root /var/www/perftestsite;
+  #root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite;
+  
+  location / {
+    # server will scan and list all of the contents of your website’s root directory by autoindex
+    autoindex on;
+    autoindex_exact_size off;
+  }
+  
 }
