running as root - 403 issue is solved

--- a/nginx/sites-available/perftestsite.local.conf
+++ b/nginx/sites-available/perftestsite.local.conf
@@ -2,6 +2,8 @@ server {
   listen 11620;
   root /var/www/perftestsite;
   #root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite;
+  # todo: 403 code with other root dir even after chown & chmod changes. It works fine while starting nginx from root usr !
+  
   
   location / {
     # server will scan and list all of the contents of your website’s root directory by autoindex
