--- a/nginx/sites-available/perftestsite.lht.conf
+++ b/nginx/sites-available/perftestsite.lht.conf
@@ -1,6 +1,7 @@
 server {
-  listen 11620;
-  root /var/www/perftestsite;
+  listen      11620;
+  server_name perftestsite.lht
+  root        /var/www/perftestsite;
   #root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite;
   # todo: 403 code with other root dir even after chown & chmod changes. It works fine while starting nginx from root usr !
   
