install curl; test localhost by nginx

--- a/nginx/sites-available/perftestsite.lht.conf
+++ b/nginx/sites-available/perftestsite.lht.conf
@@ -1,11 +1,8 @@
 server {
   listen      11620;
-  server_name perftestsite.lht
+  server_name perftestsite.lht www.perftestsite.lht;
+  index index.html;
   root        /var/www/perftestsite;
-  #root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite;
-  # todo: 403 code with other root dir even after chown & chmod changes. It works fine while starting nginx from root usr !
-  
-  
   location / {
     # server will scan and list all of the contents of your website’s root directory by autoindex
     autoindex on;
@@ -13,3 +10,6 @@ server {
   }
   
 }
+
+#root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite;
+  # todo: 403 code with other root dir even after chown & chmod changes. It works fine while starting nginx from root usr !
