nginx: configuring location & logs

--- a/nginx/sites-available/perftestsite.lht.conf
+++ b/nginx/sites-available/perftestsite.lht.conf
@@ -1,15 +1,38 @@
 server {
   listen      11620;
-  server_name perftestsite.lht www.perftestsite.lht;
+
+  # server_name perftestsite.lht www.perftestsite.lht;
+
   index index.html;
+
   root        /var/www/perftestsite;
+
+  # have site specific log config
+  access_log /var/log/nginx/perftestsite.access.log;
+  error_log /var/log/nginx/perftestsite.error.log;
+  
   location / {
+    # look for a file or dir with name same as uri, if nto available show error code (=error-code)
+    try_files $uri $uri/ =404;
+  }
+
+  location /images {
     # server will scan and list all of the contents of your website’s root directory by autoindex
     autoindex on;
     autoindex_exact_size off;
   }
+
+  # map to custom error pages
+  error_page 404 /404.html;
+
+  # = means exact match modifier
+  location = /404.html {
+    internal; # interna redirect
+  }
   
 }
 
-#root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite;
-  # todo: 403 code with other root dir even after chown & chmod changes. It works fine while starting nginx from root usr !
+# root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite.lht;
+# todo: 403 code with other root dir even after chown & chmod changes. It works fine while starting nginx from root usr !
+# \cp -r /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite.lht/* /var/www/perftestsite/
+
