nginx security config - deny , password

--- a/nginx/sites-available/perftestsite.lht.conf
+++ b/nginx/sites-available/perftestsite.lht.conf
@@ -29,7 +29,15 @@ server {
   location = /404.html {
     internal; # interna redirect
   }
-  
+
+  location /denydir {
+    deny all;
+  }
+
+  location /sensitivedir {
+    allow 127.0.0.1;
+    deny all;
+  }
 }
 
 # root /home/krishnam/github/ohmy-linux/nginx/var-www/perftestsite.lht;
