--- a/nginx/sites-available/perftestsite.lht.conf
+++ b/nginx/sites-available/perftestsite.lht.conf
@@ -17,6 +17,9 @@ server {
   }
 
   location /images {
+    auth_basic "Authentication is required !";
+    auth_basic_user_file /etc/nginx/passwords;
+  
     # server will scan and list all of the contents of your website’s root directory by autoindex
     autoindex on;
     autoindex_exact_size off;
