--- a/nginx/sites-available/perftestsite.lht.conf
+++ b/nginx/sites-available/perftestsite.lht.conf
@@ -1,6 +1,16 @@
 server {
-  listen      11620;
+  listen      11620; # http port
 
+  #redirect: The HTTP response status code 301 Moved Permanently is used for permanent redirecting, meaning current links or records using the URL that the response is received for should be updated.
+  return 301 https://$server_addr$request_uri;
+}
+
+server {
+  listen  443 ssl; #https port
+
+  ssl_certificate /etc/ssl/certs/nginx.crt;
+  ssl_certificate_key /etc/ssl/private/nginx.key;
+  
   # server_name perftestsite.lht www.perftestsite.lht;
 
   index index.html;
