nginx: playing with load-balancing algo; tmux config

--- a/nginx/sites-available/serve-static-content.conf
+++ b/nginx/sites-available/serve-static-content.conf
@@ -1,6 +1,6 @@
 server {
   listen 80 default_server;
-  server_name static-content.lht;
+  server_name static-content.local;
 
   location / {
     root /usr/share/nginx/html;
