--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -233,6 +233,11 @@ set-window-option -g message-style fg=black,bold,bg=colour11
 # Enable powerline status bar
 # run-shell 'powerline-config tmux setup'
 
+# Basic
+set-option -g status on
+set-option -g status-interval 2           # Update the status line every 2 seconds (15 is default)
+set-option -g status-utf8 on
+
 # Status Bar
 set-option -g status-style fg=white,bg=colour016
 set-option -g status-justify centre
@@ -243,16 +248,17 @@ set-window-option -g window-status-separator |
 
 # Left Side
 # Show my active session, window, pane name or id  
-set-option -g status-left-length 50   # default 10
-set-option -g status-left "#[fg=#d0d3d4] #S | [#I]#W | [#P]"
+set-option -g status-left-length 60   # default 10
+# set-option -g status-left "#[fg=#d0d3d4] #S | [#I]#W | [#P]"
+set-option -g status-left "#(~/kroot/theme/tmux-powerline/powerline.sh left)"
 # set-option -g status-left-style
 
 # Right Side
-set-option -g status-right-length 60   # default 50
-set-option -g status-right "#{cpu_fg_color}C#{cpu_percentage} | #{ram_fg_color}R#{ram_percentage} | #[fg=#00a4f1]D#(df -hl  | egrep 'sda3|22991' | awk '{print $5}') | #[fg=#d0d3d4]#(uptime | awk '/up/{gsub(\",\",\"\",$0); print $3;}')"
+set-option -g status-right-length 90   # default 50
+# set-option -g status-right "#{cpu_fg_color}C#{cpu_percentage} | #{ram_fg_color}R#{ram_percentage} | #[fg=#00a4f1]D#(df -hl  | egrep 'sda3|22991' | awk '{print $5}') | #[fg=#d0d3d4]#(uptime | awk '/up/{gsub(\",\",\"\",$0); print $3;}')"
+set-option -g status-right "#(~/kroot/theme/tmux-powerline/powerline.sh right)"
 
 # Enable Activity Alerts
-set-option -g status-interval 60           # Update the status line every 60 seconds (15 is default)
 set-window-option -g monitor-activity on   # highlights the window name in the status line
 # ```
 
@@ -270,6 +276,7 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'  # used in tmux powerline
 
 set -g @cpu_percentage_format "%02d%%"
 set -g @ram_percentage_format "%02d%%"
