tmux status powerline update

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -230,8 +230,6 @@ set-window-option -g message-style fg=black,bold,bg=colour11
 
 # Instead of going fancy here, I just focused on what can help me during my work and less resource-intensive operation. Below is my status bar config;
 # ```
-# Enable powerline status bar
-# run-shell 'powerline-config tmux setup'
 
 # Basic
 set-option -g status on
@@ -239,12 +237,13 @@ set-option -g status-interval 2           # Update the status line every 2 secon
 set-option -g status-utf8 on
 
 # Status Bar
-set-option -g status-style fg=white,bg=colour016
+set-option -g status-style fg=white,bg=colour235
 set-option -g status-justify centre
-set-window-option -g window-status-style fg=colour30,bg=colour234
-set-window-option -g window-status-last-style fg=colour36,bg=colour233
-set-window-option -g window-status-current-style fg=colour48,bg=colour232
-set-window-option -g window-status-separator |
+#set-window-option -g window-status-style fg=colour255,bg=colour235
+set-window-option -g window-status-last-style fg=colour36,bg=colour235
+#set-window-option -g window-status-current-style fg=colour48,bg=colour232
+set-window-option -g window-status-separator " "
+set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]"
 
 # Left Side
 # Show my active session, window, pane name or id  
