tmux status fix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -243,7 +243,7 @@ set-option -g status-justify centre
 set-window-option -g window-status-last-style fg=colour36,bg=colour235
 #set-window-option -g window-status-current-style fg=colour48,bg=colour232
 set-window-option -g window-status-separator " "
-set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]"
+set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#[fg=colour255, bg=colour27] [#I] #W #[fg=colour27, bg=colour235]"
 
 # Left Side
 # Show my active session, window, pane name or id  
