--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -192,7 +192,7 @@ bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buff
 
 # To take ASCII screenshots (tmux-resurrect uses C-s for saving, here binding to Alt-s ) .
 # create the dir for storing screenshots
-bind-key M-s run "tmux capture-pane; tmux save-buffer ~/.mytmux/screenshots/#{session_name}-#{window_index}-#{pane_index}-$(date +%Y%m%dT%H%M%S).screenshot"
+bind-key M-s run "tmux capture-pane; tmux save-buffer ~/kroot/history/tmux/#{session_name}-#{window_index}-#{pane_index}-$(date +%Y%m%dT%H%M%S).screenshot"
 
 # ```
 
@@ -249,13 +249,13 @@ set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#
 # Show my active session, window, pane name or id  
 set-option -g status-left-length 60   # default 10
 # set-option -g status-left "#[fg=#d0d3d4] #S | [#I]#W | [#P]"
-set-option -g status-left "#(~/kroot/tmux-powerline/powerline.sh left)"
+set-option -g status-left "#(~/kroot/style/tmux-powerline/powerline.sh left)"
 # set-option -g status-left-style
 
 # Right Side
 set-option -g status-right-length 90   # default 50
 # set-option -g status-right "#{cpu_fg_color}C#{cpu_percentage} | #{ram_fg_color}R#{ram_percentage} | #[fg=#00a4f1]D#(df -hl  | egrep 'sda3|22991' | awk '{print $5}') | #[fg=#d0d3d4]#(uptime | awk '/up/{gsub(\",\",\"\",$0); print $3;}')"
-set-option -g status-right "#(~/kroot/tmux-powerline/powerline.sh right)"
+set-option -g status-right "#(~/kroot/style/tmux-powerline/powerline.sh right)"
 
 # Enable Activity Alerts
 set-window-option -g monitor-activity on   # highlights the window name in the status line
@@ -267,7 +267,7 @@ set-window-option -g monitor-activity on   # highlights the window name in the s
 # If you setup resurrect, then, the next logical thing to do is setup 'continuum' to make the saving and restroing as an automatic step.
 # ```
 # change the install path
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.mytmux/plugins'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/kroot/plugins/tmux'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -281,7 +281,7 @@ set -g @cpu_percentage_format "%02d%%"
 set -g @ram_percentage_format "%02d%%"
 
 # By default files are saved in ~/.tmux/resurrect dir. Change this to our custom path
-set -g @resurrect-dir '~/.mytmux/resurrect'
+set -g @resurrect-dir '~/kroot/resurrect/tmux'
 
 # Last saved environment is automatically restored when tmux is started.
 set -g @continuum-boot 'on'  
@@ -293,7 +293,7 @@ set -g @continuum-save-interval '30'
 set -g @continuum-boot-options 'fullscreen' 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.mytmux/plugins/tpm/tpm'
+run '~/kroot/plugins/tmux/tpm/tpm'
 
 # Hit prefix + I to install plugins for the first time. It takes few seconds. So, wait before panic.
 # 
